# fesca

./: .dockerignore  .gitignore  CLUSTER_INFO.md  CLUSTER_SETUP.md  Cargo.toml  DOCKER_README.md  Dockerfile  LICENSE  README.md  build.rs  config.txt  docker-compose.yml  testmain
data_analyst/src/: lib.rs  sql.rs
docs/: DM Main.ovpn  gantt_chart_secrecy.xlsx  gantt_chart_secrecy1.xlsx  general_info_16052025  rust_documentation
docs/Presentation/Presentation 04.07.2025/: 03072025_darya_progress.pptx  Alisher 04.07.2025.pptx
docs/Presentation/Presentation 11.07.2025/: 11072025_darya_progress.pptx  SysLabPres110725.pptx
docs/Presentation/Presentation 27.06.2025/: 27062025_darya_progress.pptx  Alisher 27.06.2025.pptx
docs/preparation/: connecting_to_dm_servers  necessary_links
docs/team_meetings/: team_meeting_11052025  team_meeting_27052025
fesca/: .gitignore  Cargo.toml  config.txt  config_test.txt
fesca/cloud/: Cargo.toml
fesca/computing_node/: Cargo.toml  config_computing_node.json
fesca/computing_node/proto/: share_service.proto
fesca/computing_node/src/: boolean_circuits.rs  correlated_randomness.rs  grpc.rs  lib.rs  main.rs  node.rs  types.rs
fesca/computing_node/src/helpers/: hashing.rs  mod.rs  operation.rs  secret_share.rs
fesca/computing_node/src/receive/: server.rs  storage.rs
fesca/data/: lineitem.json  orders.json  part.json  partsupp.json  region.json
fesca/data_analyst/: Cargo.toml
fesca/data_analyst/src/: README.md  circuit_builder.rs  executor.rs  lib.rs  logical_plan.rs  logical_plan_algortihm.rs  logical_to_circuits.rs  physical_plan.rs  planner.rs  sql.rs  sql_to_logical.rs
fesca/data_owner/: Cargo.toml  build.rs  config_data_owner.json
fesca/data_owner/data/: partsupp.json
fesca/data_owner/src/: config.rs  encode.rs  grpc_client.rs  lib.rs  load.rs  main.rs  sharing.rs  tests.rs  types.rs
fesca/helpers/: Cargo.toml
fesca/helpers/src/: SecretShare.rs  hashing.rs  lib.rs  read_config.rs  shares_operation.rs
fesca/receive testing/: Cargo.toml  README.md
fesca/receive testing/proto/: share_service.proto
fesca/receive testing/src/: main.rs
fesca/src/: main.rs
helpers/: Cargo.toml
helpers/src/: lib.rs  read_config.rs
k8s/: README.md  client-job.yaml  configmap.yaml  deploy-all.sh  namespace.yaml  party1-deployment.yaml  party2-deployment.yaml  party3-deployment.yaml  services.yaml
proto/: correlated_randomness.proto
src/: grpc_client.rs  grpc_service.rs  main.rs  parties.rs  testmain.rs
