[package]
name = "fesca"
version = "0.1.0"
edition = "2024"
description = "Framework for Efficient Secure Collaborative Analytics"
authors = ["Mimoun Mendoughe", "Darya Igonina", "Alisher Darmenov", "Denis Boztepe"]
readme = "README.md"

[workspace]
resolver = "3"
members = [
    "data_analyst",
    "data_owner",
    "computing_node",
    "helpers"
]

[dependencies]
data_analyst = { version = "0.1.0", path = "data_analyst" }
data_owner = { version = "0.1.0", path = "data_owner" }
computing_node = { version = "0.1.0", path = "computing_node" }
helpers = { version = "0.1.0", path = "helpers" }
rand = "0.9.1"
serde = "1.0.219"
anyhow = "1.0.98"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# gRPC dependencies
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"
