[package]
name = "fesca"
version = "0.1.0"
edition = "2024"
description = "Framework for Efficient Secure Collaborative Analytics"
authors = ["Mimoun Mendoughe", "Darya Igonina", "Alisher Darmenov", "Denis Boztepe"]
readme = "README.md"

[workspace]
resolver = "3"
members = [
    "analyst",
    "client",
    "cloud",
    "helpers",
]
