[package]
name = "computing_node"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
# gRPC dependencies for receiving shares
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"


