[package]
name = "data_owner"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bitvec = { version = "1.0", features = ["serde"] }
# gRPC dependencies
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
