[package]
name = "receive_testing"
version = "0.1.0"
edition = "2024"
description = "Testing server for receiving table shares from data owners"

[workspace]
# Empty workspace table to keep this package out of the main workspace

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12" 